# bridgecardsvision

./: CMakeCache.txt  CMakeLists.txt  COFALU.txt  Dockerfile  FB1A-proj.llc  FB1A.mkv  FUNBRIDGE.txt  FindTesseract.cmake  GRIMAUD.txt  Makefile  README.md  YOUTUBE.txt  affichePlis  affichePlis.cpp  affichedonne.py  apiBridge.php  bridge.db  bridge.odb  calibration.yml  cmake_install.cmake  config.cpp  config.h  creertables  creertables.cpp  cv2c  cv2c-2025-03-03  cv2c.cpp  cv2c_2025-03-01  execOCR.py.desactive  genererAnimation.cpp  lireConfig.cpp  oldcode.txt  outils.cpp  plisBridge.html  plisjoues.html  pyOcr.cpp  serveurbase.py  setconfig.cpp  sqltest  sqltest.cpp  (+4 more)
copie/: outils.cpp
